fixes Bug 5: How It Works overlapping with Signup

--- a/src/styling/styles.scss
+++ b/src/styling/styles.scss
@@ -114,8 +114,6 @@ $font-family-base: $sourcesans;
 
 .signupMain {
   max-height: 100vh;
-  overflow: auto;
-  // border: 1px solid red;
 }
 
 @media (max-height: 750px) {
